--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/eliottbricout/hashcode#readme",
   "engines": {
     "node": ">=8.0.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   }
 }
